optaplanner/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"
  name: optaplanner
spec:
  tls:
    - hosts:
      - optaplanner.k8s.inovio.co
      secretName: optaplanner-inovio-tls
  rules:
  - host: optaplanner.k8s.inovio.co
    http:
      paths:
      - backend:
          serviceName: release-name-optaplanner-server
          servicePort: opta
        path: /
